--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   test:
-    image: python:3.6.8
+    image: python:${PY_VERSION:-3.6.8}
     volumes:
       - .:/python
     command: ${TEST_COMMAND:-python setup.py test}
