--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,8 @@
 name: CI
 
 on:
+  schedule:
+    - cron:  '0 1 * * *'
   push:
     branches: [ master ]
   pull_request:
@@ -13,11 +15,13 @@ jobs:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8]
+        redis-version: ['5', '6', 'latest']
 
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
       env:
         PY_VERSION: ${{ matrix.python-version }}
+        REDIS_VERSION: ${{ matrix.redis-version }}
       run: |
-        PY_VERSION=$PY_VERSION docker-compose run --rm test
+        docker-compose run --rm test
