--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Tests
 
 on:
   schedule:
@@ -10,7 +10,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -25,3 +24,4 @@ jobs:
         REDIS_VERSION: ${{ matrix.redis-version }}
       run: |
         docker-compose run --rm test
+      
