--- a/.github/workflows/commit_message_validation.yml
+++ b/.github/workflows/commit_message_validation.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Commit message validation
         uses: taylorhakes/commit-message-validator@master
