--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,12 +11,23 @@ jobs:
     concurrency: release
     permissions:
       id-token: write
+      contents: write
     environment: production
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
         token: ${{ secrets.GH_TOKEN }}
+
+    - uses: actions/setup-python@v4
+      with:
+        python-version: "3.x"
+
+    - name: deps
+      run: python -m pip install -U build
+
+    - name: build
+      run: python -m build
 
     - name: Python Semantic Release
       id: semantic_release
